--- a/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj.filters
+++ b/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj.filters
@@ -250,10 +250,10 @@
     <ClInclude Include="MA\ScoutMA.h">
       <Filter>Header Files\MA</Filter>
     </ClInclude>
-    <ClInclude Include="Misc\CV.h">
+    <ClInclude Include="Misc\INF.h">
       <Filter>Header Files\Misc</Filter>
     </ClInclude>
-    <ClInclude Include="Misc\CV.h">
+    <ClInclude Include="Misc\INF.h">
       <Filter>Header Files\Misc</Filter>
     </ClInclude>
     <ClInclude Include="Interfaces\BuildMA.h">
