Cleaning up Participants.h, deleted findProvince because it duplicated pickProvince (changed getCoords to pickProvince)

--- a/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
+++ b/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
@@ -214,7 +214,7 @@
     <ClInclude Include="ProvinceReport.h" />
     <ClInclude Include="Troops.h" />
     <ClInclude Include="Units\AllUnits.h" />
-    <ClInclude Include="Units\CommanderProfile.h" />
+    <ClInclude Include="Units\Commanders.h" />
     <ClInclude Include="Units\Database.h" />
     <ClInclude Include="Units\Map.h" />
     <ClInclude Include="Units\Participants.h" />
