--- a/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
+++ b/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
@@ -140,7 +140,7 @@
 	 
 	<ClCompile Include="Units\Reports\CommanderReport.cpp" />
     <ClCompile Include="Units\AllUnitsAttributes\Coords.cpp" />
-    <ClCompile Include="Units\Misc\Input.cpp" />
+    <ClCompile Include="Misc\Input.cpp" />
     <ClCompile Include="MA\ArmyOverviewMA.cpp" />
     <ClCompile Include="MA\AttackMA.cpp" />
     <ClCompile Include="MA\MapMA.cpp" />
@@ -148,9 +148,9 @@
     <ClCompile Include="MA\TrainMA.cpp" />
     <ClCompile Include="Units\CommandersAttributes\Mobility.cpp" />
     <ClCompile Include="Peace Treaty V1.2.cpp" />
-    <ClCompile Include="PlayerAction.cpp" />
+    <ClCompile Include="MA\PlayerAction.cpp" />
     <ClCompile Include="Units\Reports\ProvinceReport.cpp" />
-    <ClCompile Include="Units\Misc\INF.cpp" />
+    <ClCompile Include="Misc\INF.cpp" />
     <ClCompile Include="Units\AllUnitsAttributes\Troops\Troops.cpp" />
     <ClCompile Include="Units\AllUnits.cpp" />
     <ClCompile Include="Units\Commanders.cpp" />
@@ -194,23 +194,23 @@
     <Text Include="AdministrativeDocs\tips.txt.txt" />
 	<Text Include="AdministrativeDocs\aliases.txt" />
 	<Text Include="color.txt" />
-    <Text Include="Units\Misc\TxtFiles\Help.txt" />
-    <Text Include="Units\Misc\TxtFiles\Prompts.txt" />
-    <Text Include="Units\Misc\TxtFiles\Synopsis.txt" />
+    <Text Include="TxtFiles\Help.txt" />
+    <Text Include="TxtFiles\Prompts.txt" />
+    <Text Include="TxtFiles\Synopsis.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Build.h" />
     <ClInclude Include="Buildings.h" />
     <ClInclude Include="CommanderReport.h" />
     <ClInclude Include="Coords.h" />
-    <ClInclude Include="Units\Misc\Input.h" />
+    <ClInclude Include="Misc\Input.h" />
     <ClInclude Include="Interfaces\BuildMAInterface.h" />
     <ClInclude Include="MA\ArmyOverviewMA.h" />
     <ClInclude Include="MA\AttackMA.h" />
     <ClInclude Include="MA\MapMA.h" />
     <ClInclude Include="MA\ScoutMA.h" />
     <ClInclude Include="MA\TrainMA.h" />
-    <ClInclude Include="Units\Misc\INF.h" />
+    <ClInclude Include="Misc\INF.h" />
     <ClInclude Include="Mobility.h" />
     <ClInclude Include="PlayerAction.h" />
     <ClInclude Include="ProvinceReport.h" />
