--- a/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
+++ b/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
@@ -133,31 +133,55 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Units\ProvincesAttributes\BUILD.cpp" />
-	<ClCompile Include="Units\ProvincesAttributes\MABuildINT.cpp" />
-    <ClCompile Include="Units\ProvincesAttributes\BuildingAttributesINT.cpp" />
-	<ClCompile Include="Units\ProvincesAttributes\BuildingBases\BuildingsBASE.cpp" />
-	 
-	<ClCompile Include="Units\Reports\CommanderReport.cpp" />
-    <ClCompile Include="Units\AllUnitsAttributes\Coords.cpp" />
-    <ClCompile Include="Misc\Input.cpp" />
-    <ClCompile Include="MA\ArmyOverviewMA.cpp" />
-    <ClCompile Include="MA\AttackMA.cpp" />
-    <ClCompile Include="MA\MapMA.cpp" />
-    <ClCompile Include="MA\ScoutMA.cpp" />
-    <ClCompile Include="MA\TrainMA.cpp" />
-    <ClCompile Include="Units\CommandersAttributes\Mobility.cpp" />
-    <ClCompile Include="Peace Treaty V1.2.cpp" />
-    <ClCompile Include="MA\PlayerAction.cpp" />
-    <ClCompile Include="Units\Reports\ProvinceReport.cpp" />
-    <ClCompile Include="Misc\INF.cpp" />
-    <ClCompile Include="Units\AllUnitsAttributes\Troops\TroopUnits\Troops.cpp" />
-    <ClCompile Include="Units\AllUnits.cpp" />
-    <ClCompile Include="Units\Commanders.cpp" />
-    <ClCompile Include="Units\Database.cpp" />
-    <ClCompile Include="Units\Map.cpp" />
-    <ClCompile Include="Units\Participants.cpp" />
-    <ClCompile Include="Units\Provinces.cpp" />
+	<ClCompile Include="Operations\Source-Files\MainActions\ArmyOverviewMA.cpp" />
+	<ClCompile Include="Operations\Source-Files\MainActions\AttackMA.cpp" />
+	<ClCompile Include="Operations\Source-Files\MainActions\BuildMA.cpp" />
+	<ClCompile Include="Operations\Source-Files\MainActions\MapMA.cpp" />
+	<ClCompile Include="Operations\Source-Files\MainActions\PlayerAction.cpp" />
+	<ClCompile Include="Operations\Source-Files\MainActions\ScoutMA.cpp" />
+	<ClCompile Include="Operations\Source-Files\MainActions\TrainMA.cpp" />
+	  
+    <ClCompile Include="Operations\Source-Files\Misc\BASE.cpp" />
+    <ClCompile Include="Operations\Source-Files\Misc\INF.cpp" />
+    <ClCompile Include="Operations\Source-Files\Misc\Input.cpp" />
+
+	<ClCompile Include="Operations\Source-Files\Units\Commanders\Mobility.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Commanders\Commanders.cpp" />
+
+	<ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Archers.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Artillary.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Cavalry.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Guards.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Infantry.cpp" />
+    <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\TroopUnitsBASE.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\PrimeUnits\AllUnits.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\PrimeUnits\CoordsBASE.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\PrimeUnits\TroopsINT.cpp" />
+
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Barracks.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Infirmary.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Library.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Residences.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Wall.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Church.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Farm.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Mill.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Mine.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Quarry.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\ResourceBuildingsBASE.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\BUILD.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\BuildingAttributesINT.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\BuildingsBASE.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Provinces\Provinces.cpp" />
+	  
+	<ClCompile Include="Operations\Source-Files\Units\Reports\CommanderReport.cpp" />
+	<ClCompile Include="Operations\Source-Files\Units\Reports\ProvinceReport.cpp" />
+
+    <ClCompile Include="Operations\Source-Files\Units\Database.cpp" />
+    <ClCompile Include="Operations\Source-Files\Units\Map.cpp" />
+    <ClCompile Include="Operations\Source-Files\Units\Participants.cpp" />
+
+	<ClCompile Include="Peace Treaty V1.2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\..\..\..\Downloads\1June2022.txt" />
@@ -199,28 +223,53 @@
     <Text Include="TxtFiles\Synopsis.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Build.h" />
-    <ClInclude Include="Buildings.h" />
-    <ClInclude Include="CommanderReport.h" />
-    <ClInclude Include="CoordsBASE.h" />
-    <ClInclude Include="Misc\Input.h" />
-    <ClInclude Include="Interfaces\BuildMAInterface.h" />
-    <ClInclude Include="MA\ArmyOverviewMA.h" />
-    <ClInclude Include="MA\AttackMA.h" />
-    <ClInclude Include="MA\MapMA.h" />
-    <ClInclude Include="MA\ScoutMA.h" />
-    <ClInclude Include="MA\TrainMA.h" />
-    <ClInclude Include="Misc\INF.h" />
-    <ClInclude Include="Mobility.h" />
-    <ClInclude Include="PlayerAction.h" />
-    <ClInclude Include="ProvinceReport.h" />
-    <ClInclude Include="TroopUnitsBASE.h" />
-    <ClInclude Include="Units\AllUnits.h" />
-    <ClInclude Include="Units\Commanders.h" />
-    <ClInclude Include="Units\Database.h" />
-    <ClInclude Include="Units\Map.h" />
-    <ClInclude Include="Units\Participants.h" />
-    <ClInclude Include="Units\Provinces.h" />
+	<ClCompile Include="Operations\Header-Files\MainActions\ArmyOverviewMA.h" />
+	<ClCompile Include="Operations\Header-Files\MainActions\AttackMA.h" />
+	<ClCompile Include="Operations\Header-Files\MainActions\BuildMA.h" />
+	<ClCompile Include="Operations\Header-Files\MainActions\MapMA.h" />
+	<ClCompile Include="Operations\Header-Files\MainActions\PlayerAction.h" />
+	<ClCompile Include="Operations\Header-Files\MainActions\ScoutMA.h" />
+	<ClCompile Include="Operations\Header-Files\MainActions\TrainMA.h" />
+
+	<ClCompile Include="Operations\Header-Files\Misc\BASE.h" />
+	<ClCompile Include="Operations\Header-Files\Misc\INF.h" />
+	<ClCompile Include="Operations\Header-Files\Misc\Input.h" />
+
+	<ClCompile Include="Operations\Header-Files\Units\Commanders\Mobility.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Commanders\Commanders.h" />
+
+	<ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Archers.h" />
+	<ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Artillary.h" />
+	<ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Cavalry.h" />
+	<ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Guards.h" />
+	<ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Infantry.h" />
+	<ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\TroopUnitsBASE.h" />
+	<ClCompile Include="Operations\Header-Files\Units\PrimeUnits\AllUnits.h" />
+	<ClCompile Include="Operations\Header-Files\Units\PrimeUnits\CoordsBASE.h" />
+	<ClCompile Include="Operations\Header-Files\Units\PrimeUnits\TroopsINT.h" />
+
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Barracks.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Infirmary.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Library.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Residences.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Wall.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Church.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Farm.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Mill.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Mine.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Quarry.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\ResourceBuildingsBASE.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\BUILD.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\BuildingAttributesINT.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\BuildingsBASE.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Provinces\Provinces.h" />
+
+	<ClCompile Include="Operations\Header-Files\Units\Reports\CommanderReport.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Reports\ProvinceReport.h" />
+
+	<ClCompile Include="Operations\Header-Files\Units\Database.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Map.h" />
+	<ClCompile Include="Operations\Header-Files\Units\Participants.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
