--- a/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
+++ b/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
@@ -140,11 +140,14 @@
     <ClCompile Include="Operations\Source-Files\MainActions\PlayerAction.cpp" />
     <ClCompile Include="Operations\Source-Files\MainActions\ScoutMA.cpp" />
     <ClCompile Include="Operations\Source-Files\MainActions\TrainMA.cpp" />
+	  
     <ClCompile Include="Operations\Source-Files\Misc\BASE.cpp" />
     <ClCompile Include="Operations\Source-Files\Misc\INF.cpp" />
     <ClCompile Include="Operations\Source-Files\Misc\Input.cpp" />
+	  
     <ClCompile Include="Operations\Source-Files\Units\Commanders\Mobility.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Commanders\Commanders.cpp" />
+	  
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Archers.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Artillary.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Cavalry.cpp" />
@@ -152,26 +155,33 @@
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Infantry.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\TROOP.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\TroopUnitsBASE.cpp" />
+	  
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\PrimeUnits.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\CoordsBASE.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\TroopsINT.cpp" />
+	  
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Barracks.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Infirmary.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Library.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Residences.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Wall.cpp" />
+	  
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Church.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Farm.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Mill.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Mine.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Quarry.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\ResourceBuildingsBASE.cpp" />
+	  
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\BUILD.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\BuildingAttributesINT.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\BuildingsBASE.cpp" />
+	  
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Provinces.cpp" />
+	  
     <ClCompile Include="Operations\Source-Files\Units\Reports\CommanderReport.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Reports\ProvinceReport.cpp" />
+	  
     <ClCompile Include="Operations\Source-Files\Units\Map.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Participants.cpp" />
     <ClCompile Include="Peace Treaty V1.2.cpp" />
@@ -184,6 +194,18 @@
     <Text Include="AdministrativeDocs\notes.txt.txt" />
     <Text Include="AdministrativeDocs\tips.txt.txt" />
     <Text Include="AdministrativeDocs\aliases.txt" />
+    <Text Include="Support\AdministrativeDocs\aliases.txt" />
+    <Text Include="Support\AdministrativeDocs\color.txt" />
+    <Text Include="Support\AdministrativeDocs\debugQuickAccess.txt" />
+    <Text Include="Support\AdministrativeDocs\documentationStyle.txt" />
+    <Text Include="Support\AdministrativeDocs\headersAllocation.txt" />
+    <Text Include="Support\AdministrativeDocs\needToDo.txt" />
+    <Text Include="Support\AdministrativeDocs\notes.txt" />
+    <Text Include="Support\AdministrativeDocs\outputResults.txt" />
+    <Text Include="Support\AdministrativeDocs\tips.txt" />
+    <Text Include="Support\TxtFiles\Help.txt" />
+    <Text Include="Support\TxtFiles\Prompts.txt" />
+    <Text Include="Support\TxtFiles\Synopsis.txt" />
     <Text Include="TxtFiles\Help.txt" />
     <Text Include="TxtFiles\Prompts.txt" />
     <Text Include="TxtFiles\Synopsis.txt" />
@@ -196,37 +218,47 @@
     <ClCompile Include="Operations\Header-Files\MainActions\PlayerAction.h" />
     <ClCompile Include="Operations\Header-Files\MainActions\ScoutMA.h" />
     <ClCompile Include="Operations\Header-Files\MainActions\TrainMA.h" />
+	  
     <ClCompile Include="Operations\Header-Files\Misc\BASE.h" />
     <ClCompile Include="Operations\Header-Files\Misc\INF.h" />
     <ClCompile Include="Operations\Header-Files\Misc\Input.h" />
+	  
     <ClCompile Include="Operations\Header-Files\Units\Commanders\Mobility.h" />
     <ClCompile Include="Operations\Header-Files\Units\Commanders\Commanders.h" />
+	  
     <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Archers.h" />
     <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Artillary.h" />
     <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Cavalry.h" />
     <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Guards.h" />
     <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Infantry.h" />
     <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\TroopUnitsBASE.h" />
+	  
     <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\PrimeUnits.h" />
     <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\CoordsBASE.h" />
     <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\TroopsINT.h" />
+	  
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Barracks.h" />
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Infirmary.h" />
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Library.h" />
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Residences.h" />
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Wall.h" />
+	  
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Church.h" />
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Farm.h" />
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Mill.h" />
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Mine.h" />
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Quarry.h" />
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\ResourceBuildingsBASE.h" />
+	  
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\BUILD.h" />
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\BuildingAttributesINT.h" />
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\BuildingsBASE.h" />
+	  
     <ClCompile Include="Operations\Header-Files\Units\Provinces\Provinces.h" />
+	  
     <ClCompile Include="Operations\Header-Files\Units\Reports\CommanderReport.h" />
     <ClCompile Include="Operations\Header-Files\Units\Reports\ProvinceReport.h" />
+	  
     <ClCompile Include="Operations\Header-Files\Units\Map.h" />
     <ClCompile Include="Operations\Header-Files\Units\Participants.h" />
   </ItemGroup>
@@ -235,6 +267,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\TROOP.h" />
+    <ClInclude Include="Support\Paths.h" />
+    <ClInclude Include="Support\Paths\MainActions\MainActions_Paths.h" />
+    <ClInclude Include="Support\Paths\Misc\Misc_Paths.h" />
+    <ClInclude Include="Support\Paths\Units\Commanders\Commanders_Paths.h" />
+    <ClInclude Include="Support\Paths\Units\PrimeUnits\PrimeUnits_Paths.h" />
+    <ClInclude Include="Support\Paths\Units\PrimeUnits\Troops\Troops_Paths.h" />
+    <ClInclude Include="Support\Paths\Units\Provinces\Buildings\Buildings_Paths.h" />
+    <ClInclude Include="Support\Paths\Units\Provinces\Buildings\Others\Others_Paths.h" />
+    <ClInclude Include="Support\Paths\Units\Provinces\Buildings\ResourceBuildings\Resources_Paths.h" />
+    <ClInclude Include="Support\Paths\Units\Provinces\Provinces_Paths.h" />
+    <ClInclude Include="Support\Paths\Units\Reports\Reports_Paths.h" />
+    <ClInclude Include="Support\Paths\Units\Units_Paths.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
