--- a/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
+++ b/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
@@ -211,62 +211,65 @@
     <Text Include="TxtFiles\Prompts.txt" />
     <Text Include="TxtFiles\Synopsis.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Operations\Header-Files\MainActions\ArmyOverviewMA.h" />
-    <ClCompile Include="Operations\Header-Files\MainActions\AttackMA.h" />
-    <ClCompile Include="Operations\Header-Files\MainActions\BuildMA.h" />
-    <ClCompile Include="Operations\Header-Files\MainActions\MapMA.h" />
-    <ClCompile Include="Operations\Header-Files\MainActions\PlayerAction.h" />
-    <ClCompile Include="Operations\Header-Files\MainActions\ScoutMA.h" />
-    <ClCompile Include="Operations\Header-Files\MainActions\TrainMA.h" />
-	  
-    <ClCompile Include="Operations\Header-Files\Misc\BASE.h" />
-    <ClCompile Include="Operations\Header-Files\Misc\INF.h" />
-    <ClCompile Include="Operations\Header-Files\Misc\Input.h" />
-	  
-    <ClCompile Include="Operations\Header-Files\Units\Commanders\Mobility.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Commanders\Commanders.h" />
-	  
-    <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Archers.h" />
-    <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Artillary.h" />
-    <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Cavalry.h" />
-    <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Guards.h" />
-    <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\Infantry.h" />
-    <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\Troops\TroopUnitsBASE.h" />
-	  
-    <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\PrimeUnits.h" />
-    <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\CoordsBASE.h" />
-    <ClCompile Include="Operations\Header-Files\Units\PrimeUnits\TroopsINT.h" />
-	  
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Barracks.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Infirmary.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Library.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Residences.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Wall.h" />
-	  
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Church.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Farm.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Mill.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Mine.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Quarry.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\ResourceBuildingsBASE.h" />
-	  
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\BUILD.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\BuildingAttributesINT.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Buildings\BuildingsBASE.h" />
-	  
-    <ClCompile Include="Operations\Header-Files\Units\Provinces\Provinces.h" />
-	  
-    <ClCompile Include="Operations\Header-Files\Units\Reports\CommanderReport.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Reports\ProvinceReport.h" />
-	  
-    <ClCompile Include="Operations\Header-Files\Units\Map.h" />
-    <ClCompile Include="Operations\Header-Files\Units\Participants.h" />
-  </ItemGroup>
+
   <ItemGroup>
     <None Include="..\README.md" />
   </ItemGroup>
+	
   <ItemGroup>
+	<ClInclude Include="Operations\Header-Files\MainActions\ArmyOverviewMA.hpp" />
+	<ClInclude Include="Operations\Header-Files\MainActions\AttackMA.hpp" />
+	<ClInclude Include="Operations\Header-Files\MainActions\BuildMA.hpp" />
+	<ClInclude Include="Operations\Header-Files\MainActions\MapMA.hpp" />
+	<ClInclude Include="Operations\Header-Files\MainActions\PlayerAction.hpp" />
+	<ClInclude Include="Operations\Header-Files\MainActions\ScoutMA.hpp" />
+	<ClInclude Include="Operations\Header-Files\MainActions\TrainMA.hpp" />
+
+	<ClInclude Include="Operations\Header-Files\Misc\BASE.h" />
+	<ClInclude Include="Operations\Header-Files\Misc\INF.h" />
+	<ClInclude Include="Operations\Header-Files\Misc\Input.h" />
+
+	<ClInclude Include="Operations\Header-Files\Units\Commanders\Mobility.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Commanders\Commanders.h" />
+
+	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Archers.h" />
+	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Artillary.h" />
+	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Cavalry.h" />
+	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Guards.h" />
+	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Infantry.h" />
+	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\TroopUnitsBASE.h" />
+
+	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\PrimeUnits.h" />
+	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\CoordsBASE.h" />
+	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\TroopsINT.h" />
+
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Barracks.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Infirmary.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Library.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Residences.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Wall.h" />
+
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Church.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Farm.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Mill.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Mine.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Quarry.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\ResourceBuildingsBASE.h" />
+
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\BUILD.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\BuildingAttributesINT.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\BuildingsBASE.h" />
+
+	<ClInclude Include="Operations\Header-Files\Units\Provinces\Provinces.h" />
+
+	<ClInclude Include="Operations\Header-Files\Units\Reports\CommanderReport.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Reports\ProvinceReport.h" />
+
+	<ClInclude Include="Operations\Header-Files\Units\Map.h" />
+	<ClInclude Include="Operations\Header-Files\Units\Participants.h" />
+	  
+	  
+	  
     <ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\TROOP.h" />
     <ClInclude Include="Support\Paths.h" />
     <ClInclude Include="Support\Paths\MainActions\MainActions_Paths.h" />
@@ -280,6 +283,7 @@
     <ClInclude Include="Support\Paths\Units\Provinces\Provinces_Paths.h" />
     <ClInclude Include="Support\Paths\Units\Reports\Reports_Paths.h" />
     <ClInclude Include="Support\Paths\Units\Units_Paths.h" />
+	  
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
