--- a/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
+++ b/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
@@ -133,7 +133,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-	<ClCompile Include="Peace Treaty V1.2.cpp" />
+    <ClCompile Include="Operations\Source-Files\Misc\LOG.cpp" />
+    <ClCompile Include="Operations\Source-Files\Units\AIParticipant.cpp" />
+    <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Buildings.cpp" />
+    <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\ResourceBuildings.cpp" />
+    <ClCompile Include="Peace Treaty V1.2.cpp" />
     <ClCompile Include="Operations\Source-Files\MainActions\ArmyOverviewMA.cpp" />
     <ClCompile Include="Operations\Source-Files\MainActions\AttackMA.cpp" />
     <ClCompile Include="Operations\Source-Files\MainActions\BuildMA.cpp" />
@@ -141,14 +145,11 @@
     <ClCompile Include="Operations\Source-Files\MainActions\PlayerAction.cpp" />
     <ClCompile Include="Operations\Source-Files\MainActions\ScoutMA.cpp" />
     <ClCompile Include="Operations\Source-Files\MainActions\TrainMA.cpp" />
-	  
     <ClCompile Include="Operations\Source-Files\Misc\BASE.cpp" />
     <ClCompile Include="Operations\Source-Files\Misc\INF.cpp" />
     <ClCompile Include="Operations\Source-Files\Misc\Input.cpp" />
-	  
     <ClCompile Include="Operations\Source-Files\Units\Commanders\Mobility.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Commanders\Commanders.cpp" />
-	  
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Archers.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Artillary.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Cavalry.cpp" />
@@ -156,36 +157,28 @@
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\Infantry.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\TROOP.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\Troops\TroopUnitsBASE.cpp" />
-	  
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\PrimeUnits.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\CoordsBASE.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\PrimeUnits\TroopsINT.cpp" />
-	  
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Barracks.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Infirmary.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Library.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Residences.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Others\Wall.cpp" />
-	  
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Church.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Farm.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Mill.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Mine.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\Quarry.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\Resources\ResourceBuildingsBASE.cpp" />
-	  
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\BUILD.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\BuildingAttributesINT.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Buildings\BuildingsBASE.cpp" />
-	  
     <ClCompile Include="Operations\Source-Files\Units\Provinces\Provinces.cpp" />
-	  
     <ClCompile Include="Operations\Source-Files\Units\Reports\CommanderReport.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Reports\ProvinceReport.cpp" />
-	  
     <ClCompile Include="Operations\Source-Files\Units\Map.cpp" />
     <ClCompile Include="Operations\Source-Files\Units\Participants.cpp" />
-    
   </ItemGroup>
   <ItemGroup>
     <Text Include="AdministrativeDocs\debugQuickAccess.txt" />
@@ -211,65 +204,51 @@
     <Text Include="TxtFiles\Prompts.txt" />
     <Text Include="TxtFiles\Synopsis.txt" />
   </ItemGroup>
-
   <ItemGroup>
     <None Include="..\README.md" />
   </ItemGroup>
-	
   <ItemGroup>
-	<ClInclude Include="Operations\Header-Files\MainActions\ArmyOverviewMA.hpp" />
-	<ClInclude Include="Operations\Header-Files\MainActions\AttackMA.hpp" />
-	<ClInclude Include="Operations\Header-Files\MainActions\BuildMA.hpp" />
-	<ClInclude Include="Operations\Header-Files\MainActions\MapMA.hpp" />
-	<ClInclude Include="Operations\Header-Files\MainActions\PlayerAction.hpp" />
-	<ClInclude Include="Operations\Header-Files\MainActions\ScoutMA.hpp" />
-	<ClInclude Include="Operations\Header-Files\MainActions\TrainMA.hpp" />
-
-	<ClInclude Include="Operations\Header-Files\Misc\BASE.h" />
-	<ClInclude Include="Operations\Header-Files\Misc\INF.h" />
-	<ClInclude Include="Operations\Header-Files\Misc\Input.h" />
-
-	<ClInclude Include="Operations\Header-Files\Units\Commanders\Mobility.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Commanders\Commanders.h" />
-
-	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Archers.h" />
-	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Artillary.h" />
-	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Cavalry.h" />
-	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Guards.h" />
-	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Infantry.h" />
-	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\TroopUnitsBASE.h" />
-
-	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\PrimeUnits.h" />
-	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\CoordsBASE.h" />
-	<ClInclude Include="Operations\Header-Files\Units\PrimeUnits\TroopsINT.h" />
-
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Barracks.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Infirmary.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Library.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Residences.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Wall.h" />
-
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Church.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Farm.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Mill.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Mine.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Quarry.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\ResourceBuildingsBASE.h" />
-
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\BUILD.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\BuildingAttributesINT.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\BuildingsBASE.h" />
-
-	<ClInclude Include="Operations\Header-Files\Units\Provinces\Provinces.h" />
-
-	<ClInclude Include="Operations\Header-Files\Units\Reports\CommanderReport.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Reports\ProvinceReport.h" />
-
-	<ClInclude Include="Operations\Header-Files\Units\Map.h" />
-	<ClInclude Include="Operations\Header-Files\Units\Participants.h" />
-	  
-	  
-	  
+    <ClInclude Include="Operations\Header-Files\MainActions\ArmyOverviewMA.hpp" />
+    <ClInclude Include="Operations\Header-Files\MainActions\AttackMA.hpp" />
+    <ClInclude Include="Operations\Header-Files\MainActions\BuildMA.hpp" />
+    <ClInclude Include="Operations\Header-Files\MainActions\MapMA.hpp" />
+    <ClInclude Include="Operations\Header-Files\MainActions\PlayerAction.hpp" />
+    <ClInclude Include="Operations\Header-Files\MainActions\ScoutMA.hpp" />
+    <ClInclude Include="Operations\Header-Files\MainActions\TrainMA.hpp" />
+    <ClInclude Include="Operations\Header-Files\Misc\BASE.h" />
+    <ClInclude Include="Operations\Header-Files\Misc\INF.h" />
+    <ClInclude Include="Operations\Header-Files\Misc\Input.h" />
+    <ClInclude Include="Operations\Header-Files\Misc\LOG.hpp" />
+    <ClInclude Include="Operations\Header-Files\Units\Commanders\Mobility.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Commanders\Commanders.h" />
+    <ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Archers.h" />
+    <ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Artillary.h" />
+    <ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Cavalry.h" />
+    <ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Guards.h" />
+    <ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\Infantry.h" />
+    <ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\TroopUnitsBASE.h" />
+    <ClInclude Include="Operations\Header-Files\Units\PrimeUnits\PrimeUnits.h" />
+    <ClInclude Include="Operations\Header-Files\Units\PrimeUnits\CoordsBASE.h" />
+    <ClInclude Include="Operations\Header-Files\Units\PrimeUnits\TroopsINT.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Barracks.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Infirmary.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Library.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Residences.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Others\Wall.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Church.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Farm.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Mill.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Mine.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\Quarry.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\Resources\ResourceBuildingsBASE.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\BUILD.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\BuildingAttributesINT.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Buildings\BuildingsBASE.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Provinces\Provinces.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Reports\CommanderReport.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Reports\ProvinceReport.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Map.h" />
+    <ClInclude Include="Operations\Header-Files\Units\Participants.h" />
     <ClInclude Include="Operations\Header-Files\Units\PrimeUnits\Troops\TROOP.h" />
     <ClInclude Include="Support\Paths.h" />
     <ClInclude Include="Support\Paths\MainActions\MainActions_Paths.h" />
@@ -283,7 +262,6 @@
     <ClInclude Include="Support\Paths\Units\Provinces\Provinces_Paths.h" />
     <ClInclude Include="Support\Paths\Units\Reports\Reports_Paths.h" />
     <ClInclude Include="Support\Paths\Units\Units_Paths.h" />
-	  
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
